# storage/openapi.yaml
@@ -26,7 +26,14 @@ paths:
       operationId: app.get_add_movie_order
       description: Gets movie order details added after a timestamp
       parameters:
-        - name: timestamp
+        - name: start_timestamp
+          in: query
+          description: Limits the number of items on a page
+          schema:
+            type: string
+            format: date-time
+            example: "2016-08-29T09:12:33.001Z"
+        - name: end_timestamp
           in: query
           description: Limits the number of items on a page
           schema:
@@ -59,7 +66,14 @@ paths:
       operationId: app.get_payment
       description: Gets payment details added after a timestamp
       parameters:
-        - name: timestamp
+        - name: start_timestamp
+          in: query
+          description: Limits the number of items on a page
+          schema:
+            type: string
+            format: date-time
+            example: "2016-08-29T09:12:33.001Z"
+        - name: end_timestamp
           in: query
           description: Limits the number of items on a page
           schema:
